--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CamJam3 robot",
   "main": "index.js",
   "dependencies": {
-    "pi-gpio": "^0.0.8"
+    "rpi-gpio": "^0.8.1"
   },
   "devDependencies": {},
   "scripts": {
